--- a/css/import.css
+++ b/css/import.css
@@ -2,4 +2,4 @@
 @import url("animate.min.css");
 @import url("style.css");
 @import url("responsive.css");
-@import url("port.css");
+/* @import url("port.css"); */
