--- a/css/port.css
+++ b/css/port.css
@@ -83,11 +83,16 @@ ul.sabUl li a img{
 @media screen and (max-width: 640px) {/* 640px*/
 
 .wrapper{
-	width: 60%;
+	width: 65%;
 	/* padding: 50px 0; */
 }
 
 }
 @media screen and (max-width: 480px) {/* 480px*/
+
+/* .wrapper{
+	width: 63%;
+	padding: 50px 0;
+} */
 
 }
