--- a/css/port.css
+++ b/css/port.css
@@ -80,11 +80,12 @@ ul.sabUl li a img{
 @media (min-width: 1200px) {/* 1200px*/
 
 }
-@media screen and (max-width: 640px) {/* 640px*/
+
+@media screen and (max-width: 768px) {/* 768px*/
 
 .wrapper{
-	width: 65%;
-	/* padding: 50px 0; */
+	width: 70%;
+	padding: 45px 0;
 }
 
 }
