--- a/css/port.css
+++ b/css/port.css
@@ -91,9 +91,8 @@ ul.sabUl li a img{
 }
 @media screen and (max-width: 480px) {/* 480px*/
 
-/* .wrapper{
-	width: 70%;
-	padding: 45px 0;
-} */
+.wrapper{
+	width: 77%;
+}
 
 }
